making UI upgrade, still need to fix output of seizure detection fxn

--- a/resources.qrc
+++ b/resources.qrc
@@ -151,5 +151,6 @@
         <file>Res/HardingFPA.rc2</file>
         <file>Res/HardingFPADoc.ico</file>
         <file>Res/HardingFPA.ico</file>
+        <file>Res/cage.png</file>
     </qresource>
 </RCC>
