--- a/mainframe.ui
+++ b/mainframe.ui
@@ -448,7 +448,7 @@ border-width: 1px;
     <property name="styleSheet">
      <string notr="true">-webkit-border-radius: 5px;
 -moz-border-radius: 5px;
-border-radius: 10px;
+border-radius: 6px;
 border-color: black;
 border-width: 3px;
 border-style: solid;</string>
@@ -462,9 +462,9 @@ border-style: solid;</string>
     <widget class="Line" name="line_3">
      <property name="geometry">
       <rect>
-       <x>300</x>
+       <x>290</x>
        <y>0</y>
-       <width>3</width>
+       <width>2</width>
        <height>350</height>
       </rect>
      </property>
@@ -843,13 +843,33 @@ border-image: url(:/images/Res/RewindDisabled.png);</string>
    </property>
   </widget>
   <widget class="QSlider" name="horizontalSlider">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>280</x>
      <y>430</y>
-     <width>160</width>
+     <width>581</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QSlider::groove:horizontal {
+    border: 1px solid #999999;
+    height: 5px; /* the groove expands to the size of the slider by default. by giving it a height, it has a fixed size */
+   background: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop:0.0 #B1B1B1, stop: 1.0 #c4c4c4);
+    margin: 2px 0;
+}
+
+QSlider::handle:horizontal {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #b4b4b4, stop:1 #8f8f8f);
+    border: 1px solid #5c5c5c;
+    width: 8px;
+    margin: -6px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+    border-radius: 3px;
+}
+</string>
    </property>
    <property name="minimum">
     <number>-50</number>
