--- a/waitdialog.ui
+++ b/waitdialog.ui
@@ -31,7 +31,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Analyzing frames...</string>
+    <string>Splitting frames...</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
